			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05g: *********************************

BUG: (2/16/07, GVG) Test -> GenerationGateTest -> * were not working since last refactorization
FIX: Calling the correct constructor, GenerationGateTest instead of GenerationTest

BUG: (2/15/07, SMR, from Bob Reese) Prefuse does not compile under Java 1.6
FIX: In ExpandedFilter.getAllDepths(), added "false" as second parameter to
     m_bfs_whole.next() call.

BUG: (2/15/07, SMR) Pad frame generator doesn't handle schematic cores with bus ports.
FIX: In PadGenerator.createPadFrame() handle export wiring better.

BUG: (2/15/07, SMR, from Bob Reese) Crash during save after DRC on Java 1.6.
FIX: In output.ELIB.putOutVar(), the "Long" case should cast to "Long", not "Integer".

IMP: (2/14/07, SMR) Converting to "alternate layout view" improved to handle
     conversion from mosis/tsmc to tsmc technology.  Now prompts for new library.

BUG: (2/14/07, SMR) Simulating cells with reserved VHDL names (i.e. "nand") crashes.
FIX: In GenerateVHDL.addString(), append "_" to end instead of start when a keyword.

BUG: (2/14/07, SMR) VHDL cannot be generated from layout.
FIX: In ToolMenu.makeVHDL(), ignore schematics restriction.

BUG: (2/14/07, SMR) Implant coverage tool deletes lower-level implants.
FIX: In LayerCoverageTool.LayerVisitor.visitNodeInst(), only add implant
     regions to delete list when in the top-level.

IMP/MAN: (2/14/07, DN) Technology "tsmc90" was renamed to "cmos90" with same foundries (TSMS and ST).
    JELIB reader treats "tsmc90" as alias of "cmos90". It also patches names of meaning preferences.
    However, I didn't change reader of ProjectSettings.
    Also, a technology "tsmc180" was added with a single foundry (TSMC).
    "mocmos" technology still contains both foundries (MOSIS and TSMC) for some time period